--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -810,6 +810,8 @@
         title: ALIGN
       - local: model_doc/altclip
         title: AltCLIP
+      - local: model_doc/aria
+        title: Aria
       - local: model_doc/blip
         title: BLIP
       - local: model_doc/blip-2
