--- a/.github/workflows/self-push-amd-mi210-caller.yml
+++ b/.github/workflows/self-push-amd-mi210-caller.yml
@@ -19,7 +19,7 @@ jobs:
   run_amd_ci:
     name: AMD mi210
     if: (cancelled() != true) && ((github.event_name == 'workflow_run') || ((github.event_name == 'push') && startsWith(github.ref_name, 'run_amd_push_ci_caller')))
-    uses: huggingface/hf-workflows/.github/workflows/transformers_amd_ci_push.yaml@main
+    uses: ./.github/workflows/self-push-amd.yml
     with:
       gpu_flavor: mi210
     secrets: inherit
