--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -874,6 +874,8 @@
         title: LLaVa-NeXT-Video
       - local: model_doc/llava_onevision
         title: LLaVA-Onevision
+      - local: model_doc/llavanextvideo2
+        title: LlavaNextVideo2
       - local: model_doc/lxmert
         title: LXMERT
       - local: model_doc/matcha
