--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -882,6 +882,8 @@
         title: MGP-STR
       - local: model_doc/mllama
         title: mllama
+      - local: model_doc/molmo
+        title: molmo
       - local: model_doc/nougat
         title: Nougat
       - local: model_doc/omdet-turbo
