--- a/docs/source/zh/_toctree.yml
+++ b/docs/source/zh/_toctree.yml
@@ -50,6 +50,8 @@
     title: 导出为 TFLite
   - local: torchscript
     title: 导出为 TorchScript
+  - local: agents
+    title: 智能体和工具
   - local: gguf
     title: 与 GGUF 格式的互操作性
   - local: tiktoken
