--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -490,6 +490,8 @@
         title: mLUKE
       - local: model_doc/mobilebert
         title: MobileBERT
+      - local: model_doc/moonshine
+        title: moonshine
       - local: model_doc/mpnet
         title: MPNet
       - local: model_doc/mpt
