all required chnages

--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -902,6 +902,8 @@
         title: Qwen2VL
       - local: model_doc/sam
         title: Segment Anything
+      - local: model_doc/sam_hq
+        title: Segment Anything High Quality
       - local: model_doc/siglip
         title: SigLIP
       - local: model_doc/speech-encoder-decoder
