--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -715,6 +715,8 @@
         title: Swin2SR
       - local: model_doc/table-transformer
         title: Table Transformer
+      - local: model_doc/textnet
+        title: Text Net
       - local: model_doc/timm_wrapper
         title: Timm Wrapper
       - local: model_doc/upernet
