--- a/docs/source/en/_toctree.yml
+++ b/docs/source/en/_toctree.yml
@@ -627,6 +627,8 @@
       title: Text models
     - isExpanded: false
       sections:
+      - local: model_doc/aimv2
+        title: AIMV2
       - local: model_doc/beit
         title: BEiT
       - local: model_doc/bit
