--- a/docs/source/ar/_toctree.yml
+++ b/docs/source/ar/_toctree.yml
@@ -45,8 +45,8 @@
 #       title: نمذجة اللغة المقنعة
 #     - local: tasks/translation
 #       title: الترجمة
-#     - local: tasks/summarization
-#       title: التلخيص
+    - local: tasks/summarization
+      title: التلخيص
 #     - local: tasks/multiple_choice
 #       title: الاختيار المتعدد
     title: معالجة اللغات الطبيعية
