--- a/docs/source/ar/_toctree.yml
+++ b/docs/source/ar/_toctree.yml
@@ -43,8 +43,8 @@
 #       title: نمذجة اللغة السببية
 #     - local: tasks/masked_language_modeling
 #       title: نمذجة اللغة المقنعة
-#     - local: tasks/translation
-#       title: الترجمة
+    - local: tasks/translation
+      title: الترجمة
     - local: tasks/summarization
       title: التلخيص
     - local: tasks/multiple_choice
